[gd_scene load_steps=3 format=3 uid="uid://ca7phxxkvow4i"]

[ext_resource type="Script" path="res://Scripts/CreateSignalLine.gd" id="1_3youk"]
[ext_resource type="Texture2D" uid="uid://d0fq2f06u3avu" path="res://Assets/close_button.png" id="1_l3k4u"]

[node name="CreateSignalLine" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3youk")

[node name="SignalName" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Signal name"

[node name="SignalType" type="OptionButton" parent="."]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "With args"
popup/item_1/id = 1

[node name="Close" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("1_l3k4u")

[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
